# portfolio

./: index.html
cs236/Project1_Starter_Code/: Automaton.h  BlockcommentAutomaton.cpp  BlockcommentAutomaton.h  CommentAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  Lexer.cpp  QueriesAutomaton.cpp  RulesAutomaton.cpp  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  main.cpp  test.txt
cs236/backup/: Automaton.h  CMakeLists.txt  CommentAutomaton.h  FactsAutomaton.cpp  IdAutomaton.h  LeftparenAutomaton.cpp  LeftparenAutomaton.h  Lexer.cpp  QmarkAutomaton.h  QueriesAutomaton.h  RightparenAutomaton.cpp  RightparenAutomaton.h  RulesAutomaton.h  Token.cpp  Token.h  main.cpp  test.txt
cs260/: package-lock.json
porfolio/: index.html
